asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__gitui__tests__push__force_push.snap
---
source: src/gitui/tests/push.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 e7eb2bd main origin/main add new-file                                          |
 b66a0bf add initial-file                                                       |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git push --force-with-lease origin refs/heads/main:refs/heads/main            |
To                                                                              |
   b66a0bf..e7eb2bd  main -> main                                               |
styles_hash: 346b2eb0e6fdb3f3
